# mtg_optimizer

./: .gitignore  .pylintrc  CLAUDE.md  README.md  commands.txt  location_test_script.ps1  package-lock.json  package.json  project decscription.txt  pyproject.toml  requirements.txt  sync_mtg_script.py  traefik-cors-config.md  upload-remote.ps1  watch-syncMTG.ps1
.claude/: claude_directory_setup.sh  project-context.yml
.cursor/rules/: coding-standards.mdc  python-fastapi-bestpractice.mdc
backend/: app.py  celery_app.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  config.py  load_initial_data.py  logger.py  models.py  mtg_deap.py  mtg_logger.py  mtg_scrapper.py  mtg_utils.py  optimization.py  pyproject.toml  routes.py  services.py  start_dev.sh  tasks.py  views.py
backend/app/: __init__.py  app.py  config.py  extensions.py  logging_config.py
backend/app/api/: __init__.py  admin_routes.py  card_routes.py  data_management_routes.py  headless_cart_routes.py  main_routes.py  optimization_routes.py  routes.py  scan_routes.py  settings_routes.py  site_routes.py  views.py  watchlist_routes.py
backend/app/constants/: __init__.py  card_mappings.py  currency_constants.py
backend/app/dto/: __init__.py  optimization_dto.py
backend/app/middleware/: security_headers.py
backend/app/models/: UserBuylistCard.py  __init__.py  base_card.py  buylist.py  card.py  card_data.py  optimization_results.py  scan.py  sets.py  settings.py  site.py  site_statistics.py  user.py  user_buylist_card.py  watchlist.py
backend/app/optimization/: __init__.py  diagnostic_wrapper.py
backend/app/optimization/algorithms/: __init__.py  factory.py
backend/app/optimization/algorithms/evolutionary/: moead_optimizer.py  nsga2_optimizer.py  nsga3_optimizer.py
backend/app/optimization/algorithms/hybrid/: milp_moead_hybrid.py  milp_nsga3_hybrid.py
backend/app/optimization/algorithms/milp/: milp_optimizer.py
backend/app/optimization/config/: __init__.py  algorithm_configs.py
backend/app/optimization/core/: __init__.py  base_optimizer.py  error_handler.py  metrics.py
backend/app/optimization/postprocessing/: result_formatter.py
backend/app/optimization/preprocessing/: penalty_calculator.py
backend/app/services/: __init__.py  admin_service.py  async_base_service.py  card_manager.py  card_service.py  enhanced_optimization_service.py  mtgstocks_service.py  optimization_engine.py  optimization_service.py  scan_service.py  settings_service.py  site_service.py  user_buylist_card_service.py  user_buylist_service.py  watchlist_background_service.py  watchlist_service.py
backend/app/tasks/: __init__.py  celery_app.py  celery_config.py  celery_instance.py  celery_worker.py  optimization_tasks.py  watchlist_tasks.py
backend/app/utils/: __init__.py  async-context-manager.py  async_context_manager.py  create_user.py  data_fetcher.py  helpers.py  load_initial_data.py  logging_config.py  logging_init.py  logging_utils.py  optimization.py  selenium_driver.py  validators.py
backend/data/: Microsoft.PowerShell_profile.ps1  card_list.txt  config.json  site_list.txt
backend/data/mtg_logic/: main_v10.py  mtg_card.py  mtg_deap.py  mtg_logger.py  mtg_milp.py  mtg_scrapper.py  mtg_utils.py
backend/data/sql/: delete-scans-sqlite3-query.sqlite3-query  magic_sets.sql  tables.sql
backend/instance/: celery-broker.sqlite  database_dump.sql  site_data.db  site_data.db.old
backend/instance/db backup/: database_backup.sql  site_data_backup.db
backend/migrations.old/: env.py
backend/migrations.old/versions/Old/: 561c8d7816ce_initial_migration.py  790252084c8a_add_user_model.py  consolidated_migration.py  fa4d4900db83_update_models.py
backend/migrations/versions/: 0e4819adbdb2_recreate_sets_table_with_new_structure.py  23f77955d485_add_cache_model.py  38559da2e740_add_site_id_to_scan_result_table.py  39f9ded1a081_changed_scan_date_to_created_at.py  561c8d7816ce_initial_migration.py  57d910cc867d_initial_migration_after_recreating_.py  790252084c8a_add_user_model.py  8a9ffe301bf5_.py  8b64deac896f_add_carddata_model_and_update_scanresult.py  9ae68ac05cee_add_scan_results_relationship_to_site_.py  c38d676e0d0b_remove_cache_model_to_use_largebinary.py  c53d61935dff_add_set_to_release_date.py  consolidated_migration.py  e91a6149916d_ensure_purchase_data_column_exists.py  ed9dabb3e8d7_update_cache_model_to_use_largebinary.py  fba8cc981468_add_settings_model.py
backend/static/: asset-manifest.json  index.html  index.js
backend/static/components/: App.js  CardForm.js  MainPage.js  SiteForm.js  SiteList.js  SiteManagement.js
backend/static/pages/: Dashboard.js
backend/static/static/css/: main.d6e0774f.css  main.d6e0774f.css.map
backend/static/static/js/: 2.ede25ad3.chunk.js  2.ede25ad3.chunk.js.map  main.2177e8c2.chunk.js  main.2177e8c2.chunk.js.map  main.6912f3f5.js  main.6912f3f5.js.map  main.83c65021.js  main.83c65021.js.map  main.97a14e29.js  main.97a14e29.js.map  main.b026b533.js  main.b026b533.js.map  runtime-main.59056f5b.js  runtime-main.59056f5b.js.map
backend/templates/: index.html
backend/tests/: currency_test_script.py  test_card_service.py  test_data_fetching.py  test_get_closest_set_name.py  test_new_architecture.py  test_new_optimization.py  test_optimization.py  test_redis.py  test_requests.py  test_set_name_normalization.py  test_site_debug.py  test_tasks.py
backend/tests/services/: test_card_service.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  global.css  index.css  index.js  theme.less
frontend/src/components/: BatchOperationsBar.js  BeautifulProgressDisplay.js  CardDetail.js  CardForm.js  CardListInput.js  ColumnSelector.js  EnhancedTable.js  Layout.js  Login.css  Login.js  MainPage.js  Navigation.js  NormalizedWeightSliders.js  NotificationContainer.js  OptimizationDisplay.js  Optimize.css  Optimize.js  ParetoFrontResults.js  ProtectedRoute.js  PurchaseUrls.js  RadarChart.js  Register.js  Results.js  ScanResult.js  SiteForm.js  SiteList.js  SiteManagement.js  SubtaskProgress.js  api.js  (+4 more)
(+34 files in other folders)
